<resources>
    <string name="app_name">NMedia</string>
    <string name="helloText">NMedia!</string>
    <string name="avatar">Пустой аватар</string>
    <string name="likes" translatable="false">10</string>
    <string name="sharings" translatable="false">5</string>
    <string name="views" translatable="false">5</string>
    <string name="likes_amount" translatable="false">Количество лайков</string>
    <string name="sharing_amount" translatable="false">Количество поделившихся</string>
    <string name="views_amount" translatable="false">Количество просмотров</string>
    <string name="menu" translatable="false">Открыть меню</string>
</resources>