<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@sample/sample.json/data/author"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:text="@sample/sample.json/data/published"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_dimens"
        android:layout_height="@dimen/avatar_dimens"
        android:contentDescription="@string/avatar"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu"
        app:layout_constraintBottom_toBottomOf="@id/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/author"
        app:layout_constraintTop_toTopOf="@id/author"
        app:srcCompat="@drawable/menu_icon" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/topBarrier"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="published,avatar" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        android:paddingBottom="@dimen/common_spacing"
        android:text="@sample/sample.json/data/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/contentBarrier"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <ImageView
        android:id="@+id/likeIcon"
        android:layout_width="@dimen/icon_dimens"
        android:layout_height="@dimen/icon_dimens"
        android:layout_marginEnd="100dp"
        android:src="@drawable/like_icon"
        android:contentDescription="@string/likes_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/contentBarrier"
        app:layout_goneMarginTop="@dimen/common_spacing" />

    <TextView
        android:id="@+id/likeNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_inside_group"
        android:text="@string/likes"
        android:textColor="@color/icon_colors"
        app:layout_constraintEnd_toStartOf="@id/sharingIcon"
        app:layout_constraintStart_toEndOf="@id/likeIcon"
        app:layout_constraintTop_toTopOf="@id/contentBarrier"
        app:layout_goneMarginTop="@dimen/common_spacing" />

    <ImageView
        android:id="@+id/sharingIcon"
        android:layout_width="@dimen/icon_dimens"
        android:layout_height="@dimen/icon_dimens"
        android:src="@drawable/share_icon"
        android:layout_marginStart="@dimen/space_between_groups"
        android:contentDescription="@string/sharing_amount"
        app:layout_constraintStart_toEndOf="@id/likeNumber"
        app:layout_constraintTop_toTopOf="@id/contentBarrier"
        app:layout_goneMarginTop="@dimen/common_spacing" />

    <TextView
        android:id="@+id/sharingsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_inside_group"
        android:text="@string/sharings"
        android:textColor="@color/icon_colors"
        app:layout_constraintStart_toEndOf="@id/sharingIcon"
        app:layout_constraintTop_toTopOf="@id/contentBarrier"
        app:layout_goneMarginTop="@dimen/common_spacing" />

    <ImageView
        android:id="@+id/viewsIcon"
        android:layout_width="@dimen/icon_dimens"
        android:layout_height="@dimen/icon_dimens"
        android:src="@drawable/views_icon"
        android:contentDescription="@string/views_amount"
        android:layout_marginEnd="@dimen/space_inside_group"
        app:layout_constraintEnd_toStartOf="@id/viewsNumber"
        app:layout_constraintTop_toTopOf="@id/contentBarrier"
        app:layout_goneMarginTop="@dimen/common_spacing" />

    <TextView
        android:id="@+id/viewsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/views"
        android:textColor="@color/icon_colors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/contentBarrier"
        app:layout_goneMarginTop="@dimen/common_spacing" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="likeIcon,likeNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>